--- a/isa2owl-core/pom.xml
+++ b/isa2owl-core/pom.xml
@@ -8,6 +8,28 @@
   <name>isa2owl-core</name>
   <url>http://maven.apache.org</url>
 
+    <build>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <configuration>
+                        <source>1.6</source>
+                        <target>1.6</target>
+                    </configuration>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>2.11</version>
+                    <configuration>
+                        <runOrder>random</runOrder>
+                    </configuration>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+    </build>
+
 
     <repositories>
         <repository>
@@ -87,6 +109,12 @@
             <version>2.10.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.owldl</groupId>
+            <artifactId>pellet</artifactId>
+            <!-- latest version is 2.2.0, or earlier 2.1.1, ... -->
+            <version>2.3.0</version>
+        </dependency>
 
     </dependencies>
 </project>
