--- a/isa-graphparser/pom.xml
+++ b/isa-graphparser/pom.xml
@@ -4,7 +4,7 @@
     <groupId>org.isatools</groupId>
     <artifactId>isa-graphparser</artifactId>
     <packaging>jar</packaging>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
     <name>isa-graphparser</name>
     <url>http://maven.apache.org</url>
 
@@ -59,4 +59,15 @@
         </dependency>
 
     </dependencies>
+
+
+    <distributionManagement>
+        <repository>
+            <id>oerc-repo</id>
+            <name>OeRC Maven repository</name>
+            <url>http://frog.oerc.ox.ac.uk:8080/nexus-2.1.2/content/repositories/releases</url>
+        </repository>
+    </distributionManagement>
+
+
 </project>
