--- a/isa-graphparser/pom.xml
+++ b/isa-graphparser/pom.xml
@@ -58,6 +58,18 @@
             <version>4.10</version>
         </dependency>
 
+        <dependency>
+            <groupId>javax.enterprise</groupId>
+            <artifactId>cdi-api</artifactId>
+            <version>1.0-SP4</version>
+        </dependency>
+
+        <dependency>
+            <groupId>javassist</groupId>
+            <artifactId>javassist</artifactId>
+            <version>3.9.0.GA</version>
+        </dependency>
+
     </dependencies>
 
 
