--- a/isa-graphparser/pom.xml
+++ b/isa-graphparser/pom.xml
@@ -70,6 +70,15 @@
             <version>3.9.0.GA</version>
         </dependency>
 
+        <!--
+        <dependency>
+            <groupId>com.tinkerpop</groupId>
+            <artifactId>frames</artifactId>
+            <version>2.3.1</version>
+
+        </dependency>
+        -->
+
     </dependencies>
 
 
