--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,21 @@
 
     </repositories>
 
+    <distributionManagement>
+        <repository>
+            <id>oerc-repo</id>
+            <name>OeRC Maven repository</name>
+            <url>http://frog.oerc.ox.ac.uk:8080/nexus-2.1.2/content/repositories/releases</url>
+        </repository>
+
+        <snapshotRepository>
+            <id>oerc-snapshot</id>
+            <name>Internal Releases</name>
+            <url>http://frog.oerc.ox.ac.uk:8080/nexus-2.1.2/content/repositories/snapshots/</url>
+        </snapshotRepository>
+
+    </distributionManagement>
+
 
 </project>
 
