--- a/isa2owl-batch/pom.xml
+++ b/isa2owl-batch/pom.xml
@@ -1,23 +1,40 @@
-<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
-  <modelVersion>4.0.0</modelVersion>
-
-  <parent>
-    <artifactId>isa2owl</artifactId>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+    <modelVersion>4.0.0</modelVersion>
     <groupId>org.isatools</groupId>
-    <version>0.0.1-SNAPSHOT</version>
-  </parent>
+    <artifactId>isa2owl-batch</artifactId>
+    <packaging>jar</packaging>
+    <version>1.0-SNAPSHOT</version>
+    <name>isa2owl-batch</name>
+    <url>http://maven.apache.org</url>
 
-  <groupId>org.isatools</groupId>
-  <artifactId>isa2owl-batch</artifactId>
-  <version>1.0-SNAPSHOT</version>
-  <name>isa2owl-batch</name>
-  <url>http://maven.apache.org</url>
+    <parent>
+        <artifactId>isa2owl</artifactId>
+        <groupId>org.isatools</groupId>
+        <version>0.0.1-SNAPSHOT</version>
+    </parent>
 
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    </properties>
-
+    <build>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <configuration>
+                        <source>1.6</source>
+                        <target>1.6</target>
+                    </configuration>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>2.11</version>
+                    <configuration>
+                        <runOrder>random</runOrder>
+                    </configuration>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+    </build>
 
     <repositories>
         <repository>
@@ -37,11 +54,27 @@
             <url>https://repository.apache.org/content/repositories/releases/</url>
         </repository>
 
+
         <repository>
             <id>Aduna repository</id>
             <name>Sesame's Maven repository</name>
             <url> http://repo.aduna-software.org/maven2/releases/</url>
         </repository>
+
+
+        <!--
+        <repository>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+            <id>ontotext-aduna-releases</id>
+            <name>Ontotext mirror of Aduna releases</name>
+            <url>http://maven.ontotext.com/content/repositories/aduna/</url>
+        </repository>
+        -->
 
     </repositories>
 
@@ -55,6 +88,13 @@
     </dependency>
 
 
+     <dependency>
+          <groupId>org.openrdf.sesame</groupId>
+          <artifactId>sesame-repository-api</artifactId>
+          <version>2.7.0</version>
+     </dependency>
+
+        <!--
     <dependency>
        <groupId>org.openrdf.sesame</groupId>
        <artifactId>sesame-repository-manager</artifactId>
@@ -68,13 +108,28 @@
             <version>2.7.0</version>
         </dependency>
 
-
         <dependency>
           <groupId>org.openrdf.sesame</groupId>
           <artifactId>sesame-runtime</artifactId>
           <version>2.7.0</version>
       </dependency>
+      -->
 
   </dependencies>
+
+    <distributionManagement>
+        <repository>
+            <id>oerc-repo</id>
+            <name>OeRC Maven repository</name>
+            <url>http://frog.oerc.ox.ac.uk:8080/nexus-2.1.2/content/repositories/releases</url>
+        </repository>
+
+        <snapshotRepository>
+            <id>oerc-snapshot</id>
+            <name>Internal Releases</name>
+            <url>http://frog.oerc.ox.ac.uk:8080/nexus-2.1.2/content/repositories/snapshots/</url>
+        </snapshotRepository>
+
+    </distributionManagement>
 
 </project>
