--- a/isa2owl-core/pom.xml
+++ b/isa2owl-core/pom.xml
@@ -43,6 +43,11 @@
 			<id>oerc</id>
 			<url>http://frog.oerc.ox.ac.uk:8080/nexus-2.1.2/repositories/releases/</url>
 		</repository>
+		
+		<repository>
+			<id>oerc-snapshot</id>
+			<url>http://frog.oerc.ox.ac.uk:8080/nexus-2.1.2/repositories/snapshots/</url>
+		</repository>
 
 		<repository>
 			<id>on.cs.unibas.ch</id>
