--- a/isa2owl-core/pom.xml
+++ b/isa2owl-core/pom.xml
@@ -37,34 +37,36 @@
         </pluginManagement>
     </build>
 
-	<repositories>
-		<repository>
-			<id>oerc</id>
-			<url>http://frog.oerc.ox.ac.uk:8080/nexus-2.1.2/repositories/releases/</url>
-		</repository>
 
-		<repository>
-			<id>oerc-snapshot</id>
-			<url>http://frog.oerc.ox.ac.uk:8080/nexus-2.1.2/repositories/snapshots/</url>
-		</repository>
 
-		<repository>
-			<id>on.cs.unibas.ch</id>
-			<name>DBIS Maven Releases Repository</name>
-			<url>http://on.cs.unibas.ch/maven/repository</url>
-		</repository>
+    <repositories>
+        <repository>
+            <id>oerc</id>
+            <url>http://frog.oerc.ox.ac.uk:8080/nexus-2.1.2/repositories/releases/</url>
+        </repository>
 
-		<repository>
-			<id>Sonatype repository</id>
-			<name>Sonatype's Maven repository</name>
-			<url>https://oss.sonatype.org/content/repositories/releases/</url>
-		</repository>
+        <repository>
+            <id>oerc-snapshot</id>
+            <url>http://frog.oerc.ox.ac.uk:8080/nexus-2.1.2/repositories/snapshots/</url>
+        </repository>
 
-		<repository>
-			<id>Apache repository</id>
-			<name>Apaches's Maven repository</name>
-			<url>https://repository.apache.org/content/repositories/releases/</url>
-		</repository>
+        <repository>
+            <id>on.cs.unibas.ch</id>
+            <name>DBIS Maven Releases Repository</name>
+            <url>http://on.cs.unibas.ch/maven/repository</url>
+        </repository>
+
+        <repository>
+            <id>Sonatype repository</id>
+            <name>Sonatype's Maven repository</name>
+            <url>https://oss.sonatype.org/content/repositories/releases/</url>
+        </repository>
+
+        <repository>
+            <id>Apache repository</id>
+            <name>Apaches's Maven repository</name>
+            <url>https://repository.apache.org/content/repositories/releases/</url>
+        </repository>
 
         <repository>
             <id>Aduna repository</id>
@@ -72,53 +74,53 @@
             <url>http://repo.aduna-software.org/maven2/releases/</url>
         </repository>
 
-	</repositories>
+    </repositories>
 
-	<dependencies>
+    <dependencies>
 
-		<dependency>
-			<groupId>com.owldl</groupId>
-			<artifactId>pellet</artifactId>
-			<!-- latest version is 2.2.0, or earlier 2.1.1, ... -->
-			<version>2.2.0</version>
-		</dependency>
+        <dependency>
+            <groupId>com.owldl</groupId>
+            <artifactId>pellet</artifactId>
+            <!-- latest version is 2.2.0, or earlier 2.1.1, ... -->
+            <version>2.2.0</version>
+        </dependency>
 
-		<dependency>
-			<groupId>org.isatools</groupId>
-			<artifactId>isa-graphparser</artifactId>
-			<version>1.0-SNAPSHOT</version>
-		</dependency>
+        <dependency>
+            <groupId>org.isatools</groupId>
+            <artifactId>isa-graphparser</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
 
-		<dependency>
-			<groupId>org.isatools</groupId>
-			<artifactId>ISAcreator</artifactId>
-			<version>1.7.1</version>
-		</dependency>
+        <dependency>
+            <groupId>org.isatools</groupId>
+            <artifactId>ISAcreator</artifactId>
+            <version>1.7.1</version>
+        </dependency>
 
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.10</version>
-			<scope>test</scope>
-		</dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.10</version>
+            <scope>test</scope>
+        </dependency>
 
-		<dependency>
-			<groupId>net.sourceforge.owlapi</groupId>
-			<artifactId>owlapi-reasoner</artifactId>
-			<version>3.3</version>
-		</dependency>
+        <dependency>
+            <groupId>net.sourceforge.owlapi</groupId>
+            <artifactId>owlapi-reasoner</artifactId>
+            <version>3.3</version>
+        </dependency>
 
-		<dependency>
-			<groupId>net.sourceforge.owlapi</groupId>
-			<artifactId>owlapi-modularity</artifactId>
-			<version>3.3</version>
-		</dependency>
+        <dependency>
+            <groupId>net.sourceforge.owlapi</groupId>
+            <artifactId>owlapi-modularity</artifactId>
+            <version>3.3</version>
+        </dependency>
 
-		<dependency>
-			<groupId>net.sourceforge.owlapi</groupId>
-			<artifactId>owlapi-apibinding</artifactId>
-			<version>3.3</version>
-		</dependency>
+        <dependency>
+            <groupId>net.sourceforge.owlapi</groupId>
+            <artifactId>owlapi-apibinding</artifactId>
+            <version>3.3</version>
+        </dependency>
 
 
         <dependency>
@@ -127,48 +129,134 @@
             <version>3.4.3</version>
         </dependency>
 
-		<dependency>
-			<groupId>net.sourceforge.owlapi</groupId>
-			<artifactId>owlapi-tools</artifactId>
-			<version>3.4.3</version>
-		</dependency>
+        <dependency>
+            <groupId>net.sourceforge.owlapi</groupId>
+            <artifactId>owlapi-tools</artifactId>
+            <version>3.4.3</version>
+        </dependency>
 
-		<dependency>
-			<groupId>log4j</groupId>
-			<artifactId>log4j</artifactId>
-			<version>1.2.14</version>
-		</dependency>
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.14</version>
+        </dependency>
 
-		<dependency>
-			<groupId>org.apache.jena</groupId>
-			<artifactId>apache-jena-libs</artifactId>
-			<type>pom</type>
-			<version>2.10.0</version>
-		</dependency>
+        <dependency>
+            <groupId>org.apache.jena</groupId>
+            <artifactId>apache-jena-libs</artifactId>
+            <type>pom</type>
+            <version>2.10.0</version>
+        </dependency>
 
-		<dependency>
-			<groupId>com.owldl</groupId>
-			<artifactId>pellet</artifactId>
-			<!-- latest version is 2.2.0, or earlier 2.1.1, ... -->
-			<version>2.3.0</version>
-		</dependency>
+
+        <dependency>
+            <groupId>com.owldl</groupId>
+            <artifactId>pellet</artifactId>
+            <!-- latest version is 2.2.0, or earlier 2.1.1, ... -->
+            <version>2.3.0</version>
+        </dependency>
+
+
+
+        <dependency>
+            <groupId>org.openrdf.sesame</groupId>
+            <artifactId>sesame-runtime</artifactId>
+            <version>2.7.0</version>
+        </dependency>
+
+
+        <dependency>
+            <groupId>commons-logging</groupId>
+            <artifactId>commons-logging</artifactId>
+            <version>1.1.1</version>
+        </dependency>
+
+
+
+        <dependency>
+            <groupId>com.owldl</groupId>
+            <artifactId>pellet</artifactId>
+            <!-- latest version is 2.2.0, or earlier 2.1.1, ... -->
+            <version>2.3.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.openrdf.sesame</groupId>
+            <artifactId>sesame-repository-api</artifactId>
+            <version>2.7.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.openrdf.sesame</groupId>
+            <artifactId>sesame-repository-sail</artifactId>
+            <version>2.7.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.openrdf.sesame</groupId>
+            <artifactId>sesame-repository-manager</artifactId>
+            <version>2.7.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.openrdf.sesame</groupId>
+            <artifactId>sesame-repository-http</artifactId>
+            <version>2.7.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.openrdf.sesame</groupId>
+            <artifactId>sesame-repository-http</artifactId>
+            <version>2.7.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.openrdf.sesame</groupId>
+            <artifactId>sesame-rio-rdfxml</artifactId>
+            <version>2.7.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.openrdf.sesame</groupId>
+            <artifactId>sesame-rio-api</artifactId>
+            <version>2.7.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.openrdf.sesame</groupId>
+            <artifactId>sesame-rio-compliance</artifactId>
+            <version>2.7.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.openrdf.sesame</groupId>
+            <artifactId>sesame-rio-languages</artifactId>
+            <version>2.7.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.openrdf.sesame</groupId>
+            <artifactId>sesame-rio-datatypes</artifactId>
+            <version>2.7.0</version>
+        </dependency>
+
 
     </dependencies>
 
 
-	<distributionManagement>
-		<repository>
-			<id>oerc-repo</id>
-			<name>OeRC Maven repository</name>
-			<url>http://frog.oerc.ox.ac.uk:8080/nexus-2.1.2/content/repositories/releases</url>
-		</repository>
+    <distributionManagement>
+        <repository>
+            <id>oerc-repo</id>
+            <name>OeRC Maven repository</name>
+            <url>http://frog.oerc.ox.ac.uk:8080/nexus-2.1.2/content/repositories/releases</url>
+        </repository>
 
-		<snapshotRepository>
-			<id>oerc-snapshot</id>
-			<name>Internal Releases</name>
-			<url>http://frog.oerc.ox.ac.uk:8080/nexus-2.1.2/content/repositories/snapshots/</url>
-		</snapshotRepository>
+        <snapshotRepository>
+            <id>oerc-snapshot</id>
+            <name>Internal Releases</name>
+            <url>http://frog.oerc.ox.ac.uk:8080/nexus-2.1.2/content/repositories/snapshots/</url>
+        </snapshotRepository>
+
     </distributionManagement>
-
 
 </project>
