--- a/isa2owl-batch/pom.xml
+++ b/isa2owl-batch/pom.xml
@@ -90,7 +90,14 @@
      <dependency>
           <groupId>org.openrdf.sesame</groupId>
           <artifactId>sesame-repository-api</artifactId>
-          <version>2.7.0</version>
+          <version>2.7.6</version>
+     </dependency>
+
+     <!--functionality to query/manipulate a remotely running Sesame server -->
+     <dependency>
+        <groupId>org.openrdf.sesame</groupId>
+        <artifactId>sesame-repository-http</artifactId>
+        <version>2.7.6</version>
      </dependency>
 
   </dependencies>
