--- a/isa2owl-core/pom.xml
+++ b/isa2owl-core/pom.xml
@@ -208,19 +208,15 @@
         <dependency>
             <groupId>net.sourceforge.owlapi</groupId>
             <artifactId>owlapi-apibinding</artifactId>
-            <version>3.3</version>
+            <version>3.4.5</version>
+            <!-- <version>3.3</version> -->
         </dependency>
 
         <dependency>
             <groupId>net.sourceforge.owlapi</groupId>
             <artifactId>owlapi-tools</artifactId>
-            <version>3.4.3</version>
-        </dependency>
-
-        <dependency>
-            <groupId>net.sourceforge.owlapi</groupId>
-            <artifactId>owlapi-tools</artifactId>
-            <version>3.4.3</version>
+            <version>3.4.5</version>
+            <!-- <version>3.4</version> -->
         </dependency>
 
         <dependency>
