--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,18 @@ overlays/
 
 # Files created by IntelliJ IDEA #
 ##################################
+=======
+.DS_Store
+
+####Java
+*.class
+
+# Package Files #
+*.jar
+*.war
+*.ear
+
+#####IntelliJ
 *.iml
 *.ipr
 *.iws
@@ -67,3 +79,7 @@ Icon?
 ehthumbs.db
 Thumbs.db
 
+=======
+###Eclipse
+.classpath
+.project
