--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
         <module>isa-graphparser</module>
         <module>isa2owl-core</module>
         <module>isa2owl-batch</module>
-        <module>owl2isa</module>
+        <!-- <module>owl2isa</module> -->
   </modules>
 
 
@@ -97,8 +97,5 @@
         
 	</dependencies>
   
-<<<<<<< HEAD
+
 </project>
-=======
-</project>
->>>>>>> dfc20486808664bfb585f392c6d2aa9228559495
