--- a/isa2owl-core/pom.xml
+++ b/isa2owl-core/pom.xml
@@ -42,12 +42,7 @@
     <repositories>
         <repository>
             <id>oerc</id>
-            <url>http://frog.oerc.ox.ac.uk:8080/nexus-2.1.2/repositories/releases/</url>
-        </repository>
-
-        <repository>
-            <id>oerc-snapshot</id>
-            <url>http://frog.oerc.ox.ac.uk:8080/nexus-2.1.2/repositories/snapshots/</url>
+            <url>http://frog.oerc.ox.ac.uk:8080/nexus-2.1.2/content/groups/oerc</url>
         </repository>
 
         <repository>
@@ -94,7 +89,7 @@
         <dependency>
             <groupId>org.isatools</groupId>
             <artifactId>ISAcreator</artifactId>
-            <version>1.7.1</version>
+            <version>1.7.7</version>
         </dependency>
 
         <dependency>
