Cleaning up pom files

--- a/isa-graphparser/pom.xml
+++ b/isa-graphparser/pom.xml
@@ -34,10 +34,18 @@
             <url>http://frog.oerc.ox.ac.uk:8080/nexus-2.1.2/content/groups/oerc</url>
         </repository>
 
+        <!--
         <repository>
             <id>on.cs.unibas.ch</id>
             <name>DBIS Maven Releases Repository</name>
             <url>http://on.cs.unibas.ch/maven/repository</url>
+        </repository>
+        -->
+
+        <repository>
+            <id>mvnrepository</id>
+            <name>mvnrepository</name>
+            <url>http://www.mvnrepository.com</url>
         </repository>
 
     </repositories>
