--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,10 @@
         <module>linkedISA-core</module>
     </modules>
 
-
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
+    
     <build>
         <pluginManagement>
             <plugins>
@@ -31,9 +34,21 @@
                         <runOrder>random</runOrder>
                     </configuration>
                 </plugin>
+                <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-release-plugin</artifactId>
+                        <version>2.0-beta-9</version>
+                </plugin>
             </plugins>
         </pluginManagement>
     </build>
+
+
+    <scm>
+        <connection>scm:git@github.com:ISA-tools/linkedISA.git</connection>
+        <url>scm:git@github.com:ISA-tools/linkedISA.git</url>
+        <developerConnection>scm:git:git@github.com:ISA-tools/linkedISA.git</developerConnection>
+    </scm>
 
 
     <repositories>
@@ -48,11 +63,13 @@
             <url>https://oss.sonatype.org/content/repositories/releases/</url>
         </repository>
 
+        <!--
         <repository>
             <id>on.cs.unibas.ch</id>
             <name>DBIS Maven Releases Repository</name>
             <url>http://on.cs.unibas.ch/maven/repository</url>
         </repository>
+        -->
 
     </repositories>
 
@@ -72,5 +89,4 @@
     </distributionManagement>
 
 
-  
 </project>
