--- a/linkedISA-core/pom.xml
+++ b/linkedISA-core/pom.xml
@@ -269,9 +269,9 @@
 
 
     <scm>
-        <connection>scm:git@github.com:ISA-tools/linkedISA.git</connection>
-        <url>scm:git@github.com:ISA-tools/linkedISA.git</url>
-        <developerConnection>scm:git:git@github.com:ISA-tools/linkedISA.git</developerConnection>
+        <connection>scm:git:https://github.com/ISA-tools/linkedISA.git</connection>
+        <url>scm:git:https://github.com/ISA-tools/linkedISA.git</url>
+        <developerConnection>scm:git:https://github.com/ISA-tools/linkedISA.git</developerConnection>
     </scm>
 
 
