--- a/linkedISA-core/pom.xml
+++ b/linkedISA-core/pom.xml
@@ -3,12 +3,12 @@
     <parent>
         <artifactId>linkedISA</artifactId>
         <groupId>org.isatools</groupId>
-        <version>1.0.0</version>
+        <version>1.0.1-SNAPSHOT</version>
     </parent>
     <groupId>org.isatools</groupId>
     <artifactId>linkedISA-core</artifactId>
     <packaging>jar</packaging>
-    <version>1.0.0</version>
+    <version>1.0.1-SNAPSHOT</version>
     <name>linkedISA-core</name>
 
     <build>
@@ -71,7 +71,7 @@
         <dependency>
             <groupId>org.isatools</groupId>
             <artifactId>isa-graphparser</artifactId>
-            <version>1.0.0</version>
+            <version>1.0.1-SNAPSHOT</version>
         </dependency>
 
         <dependency>
